# local-agent-windows

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  simple.py  web.py
agents/: orchestrator.py
api/: cli.py
brain/: cerebrum.py
local_agent/: __init__.py  config.py  groq_agent.py  ollama_agent.py  ollama_tools.py  policies.py  prompts.py  skills_loader.py  tools.py
memory/semantic/: memory_system.py
saisa/: __init__.py  agent.py  autopilot.py  cli.py  config.py  errors.py  memory.py  prompts.py  session.py  swarm.py  tiers.py  turbo.py  users.py
saisa/providers/: __init__.py  anthropic_provider.py  base.py  groq_provider.py  ollama.py  openai_provider.py  registry.py
saisa/tools/: __init__.py  code_tools.py  file_tools.py  git_tools.py  project_tools.py  registry.py  saas_templates.py  shell_tools.py
saisa/ui/: __init__.py  console.py  input.py
sandbox/: docker_sandbox.py
tools/: tool_layer.py
tools/specialists/: browser.py
workspace/: LIRE-realite-agent.md  landing_page.html  nom.txt
workspace/dissertations/: README.md
workspace/memory/: README.md  journal.md
workspace/recherche/: agi-pistes-et-implementation.md
workspace/skills/: EXEMPLE-aide-dissertation.md  README.md
